wazuh-ingress/ingress-nginx/nginx-ingress-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: wazuh-ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Use NLB (Network LoadBalancer)
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "<your-arn-of-ssl-cert>" # AWS ACM certificate ARN
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https" # Enable SSL termination for HTTPS
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: wazuh-ingress
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  type: LoadBalancer
