wazuh-ingress/ingress-nginx/wazuh-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-dashboard-ingress
  namespace: wazuh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx
  rules:
    - host: ${NLB_DNS}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard  # Wazuh dashboard service name
                port:
                  number:  5601 # Port exposed for Wazuh dashboard
#  tls:
#    - hosts:
#        - wazuh.yourdomain.com  # Replace with your actual domain
#      secretName: wazuh-dashboard-tls  # (Optional if using SSL cert)
