wazuh-ingress/ingress-nginx/wazuh-worker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-workers-ingress
  namespace: wazuh
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: krypton.wagepoint.io
      http:
        paths:
          - path: /worker
            pathType: Prefix
            backend:
              service:
                name: wazuh-workers
                port:
                  number: 1514
